--- a/configs/basic_configuration.yaml
+++ b/configs/basic_configuration.yaml
@@ -1,5 +1,5 @@
 experiment:
-  log_dir: "runs"
+  log_dir: "cluster_logs"
   log_text_path: "textlog"
   log_step: False
   save_results: False
@@ -34,8 +34,14 @@ experiment:
   scheduler:
     name: "ExponentialLR" #"MultiStepLR" # "StepLR" #
     gamma: 0.99
-  cluster_optimizer: {}  
-  cluster_scheduler: {}
+  cluster_optimizer: 
+    name: "Adam" #"AdamW" #
+    lr: 1.0e-3 # 1.0e-5
+    betas: [0.9, 0.999]
+    weight_decay: 0.0  
+  cluster_scheduler: 
+    name: "ExponentialLR" #"MultiStepLR" # "StepLR" #
+    gamma: 0.99
   
   data:  
     batch_size: 256
@@ -44,54 +50,54 @@ experiment:
     drop_last: False
     
   loss:
-    name: "GCSD"
+    name: ""
+    weights: {}
     kernelsize: 5.0
     kernelsize_adapt: True #False #
     kernelsize_search_params: 
       func: 'meadian' #'max' # 
-      param: 0.15 # 10 # 
-    
+      param: 0.15 # 10 #     
     generative: False
-
-    entropy_order: 2
-    
-    weights:
-      ddc1: 1.0e-3 #2.0e-2
-      ddc2: 1.0e-4
-      ddc3: 1.0e-4
-      reconst: 1.0e-0
+    entropy_order: 2    
 
   metric: 
     name: "cluster"
     keys: ["acc", "nmi", "ari"]
   
 data:
-  root_dir: "G:/Data" #"E:/Shared/Data" #
-  cuda: False
+  root_dir: "G:/Data" #"E:/Shared/
+  cuda: True
   name: "MNIST" #"FashionMNIST" #"STL10" #
+  use_processed_data: True
+  resnet_type: "resnet50"
+  feature_type: "linear"
   
 
 model:
-  name: "DDC"
+  name: "DDC_resnet"
+  use_processed_data: True
+  resnet_type: "resnet50"
+  feature_type: "linear"
   encode_only: False
   n_cluster: 10
   alpha: 1.0
 
   autoencoder:
-    network: "CNN" #"MLP" #  
-    patch_size: [28,28]
-    hidden_dims: [32,64]
-    input_dim: 1
-    latent_dim: 200
+    network: "MLP" # "CNN" # 
+    hidden_dims: [500,500,1000]
+    input_dim: 2048
+    latent_dim: 20
     activation: "ReLU"
+    use_batchnorm: True
     final_activation: "Tanh"
+    latent_activation: "Tanh"
     weight_init: False
+    patch_size: [28,28]
     kernel_size: 5
     stride: 2
     padding: 1
     dilation: 1
     use_maxpool: True
-    use_batchnorm: True
 
 
   
